Fixed some issues with editable cells and sorting

--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -116,8 +116,8 @@
                                 <td tabindex="-1">01-Jan-16</td>
                                 <td tabindex="-1">Deposit</td>
                                 <td>
-                                    <div tabindex="-1" class="editable-text" role="button">
-                                      <span class="edit-text-button">Cash Deposit</span>
+                                    <div class="editable-text">
+                                      <span class="edit-text-button" tabindex="-1" role="button">Cash Deposit</span>
                                       <input class="edit-text-input hidden" tabindex="-1" value="" />
                                     </div>
                                 </td>
@@ -153,8 +153,8 @@
                                 <td tabindex="-1">02-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
-                                    <div tabindex="-1" class="editable-text" role="button">
-                                        <span class="edit-text-button">Down Town Grocery</span>
+                                    <div class="editable-text">
+                                        <span class="edit-text-button" tabindex="-1" role="button">Down Town Grocery</span>
                                         <input class="edit-text-input hidden" tabindex="-1" value="" />
                                     </div>
                                 </td>
@@ -190,8 +190,8 @@
                                 <td tabindex="-1">03-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
-                                    <div tabindex="-1" class="editable-text" role="button">
-                                        <span class="edit-text-button">Hot Coffee</span>
+                                    <div class="editable-text">
+                                        <span class="edit-text-button" tabindex="-1" role="button">Hot Coffee</span>
                                         <input class="edit-text-input hidden" tabindex="-1" value="" />
                                     </div>
                                 </td>
@@ -227,8 +227,8 @@
                                 <td tabindex="-1">04-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
-                                    <div tabindex="-1" class="editable-text" role="button">
-                                        <span class="edit-text-button">The Filling Station</span>
+                                    <div class="editable-text">
+                                        <span class="edit-text-button" tabindex="-1" role="button">The Filling Station</span>
                                         <input class="edit-text-input hidden" tabindex="-1" value="" />
                                     </div>
                                 </td>
@@ -264,8 +264,8 @@
                                 <td tabindex="-1">05-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
-                                    <div tabindex="-1" class="editable-text" role="button">
-                                        <span class="edit-text-button">Tinker's Hardware</span>
+                                    <div class="editable-text">
+                                        <span class="edit-text-button" tabindex="-1" role="button">Tinker's Hardware</span>
                                         <input class="edit-text-input hidden" tabindex="-1" value="" />
                                     </div>
                                 </td>
@@ -301,8 +301,8 @@
                                 <td tabindex="-1">06-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
-                                    <div tabindex="-1" class="editable-text" role="button">
-                                        <span class="edit-text-button">Cutey's Salon</span>
+                                    <div class="editable-text">
+                                        <span class="edit-text-button" tabindex="-1" role="button">Cutey's Salon</span>
                                         <input class="edit-text-input hidden" tabindex="-1" value="" />
                                     </div>
                                 </td>
@@ -338,8 +338,8 @@
                                 <td tabindex="-1">07-Jan-16</td>
                                 <td tabindex="-1">Debit</td>
                                 <td>
-                                    <div tabindex="-1" class="editable-text" role="button">
-                                        <span class="edit-text-button">My Chocolate Shop</span>
+                                    <div class="editable-text">
+                                        <span class="edit-text-button" tabindex="-1" role="button">My Chocolate Shop</span>
                                         <input class="edit-text-input hidden" tabindex="-1" value="" />
                                     </div>
                                 </td>
