--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -11,7 +11,7 @@
     <link href="../../css/table.css" rel="stylesheet">
     <link href="css/menubarLinks.css" rel="stylesheet">
 
-    <script src="js/menubarLinks.js"     type="text/javascript"></script> 
+    <script src="js/MenubarLinks.js"     type="text/javascript"></script> 
     <script src="js/MenubarItemLinks.js" type="text/javascript"></script> 
 
     <script src="js/PopupMenuLinks.js" type="text/javascript"></script> 
