--- a/common/acknowledgements.html
+++ b/common/acknowledgements.html
@@ -5,9 +5,9 @@
 		<h4>Participants active in the ARIA WG at the time of publication</h4>
 		<ul>
 			<li>Ann Abbott (IBM Corporation)</li>
-			<li>Michiel Bijl (Invited Expert)</li>
+			<li>Michiel Bijl (The Paciello Group)</li>
 			<li>Christy Blew (University of Illinois at Urbana-Champaign)</li>
-            <li>Teresa Boers (IBM Corporation)</li>
+      <li>Teresa Boers (IBM Corporation)</li>
 			<li>David Bolter (Mozilla Foundation) </li>
 			<li>Michael Cooper (W3C/MIT)</li>
 			<li>James Craig (Apple Inc.) </li>
