--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2509,7 +2509,7 @@
           </li>
 
           <li>
-            If the design calls for a specific element to be focused the next time a user moves focus into the composite with <kbd>Tab<kbd> or <kbd>Shift+Tab</kbd>, check if aria-activedescendant is referring to that target element when the container loses focus.
+            If the design calls for a specific element to be focused the next time a user moves focus into the composite with <kbd>Tab</kbd> or <kbd>Shift+Tab</kbd>, check if aria-activedescendant is referring to that target element when the container loses focus.
             If it is not, set aria-activedescendant to refer to the target element.
           </li>
         </ul>
