Tabs Example: added feedback link to issue 114

--- a/examples/tabs/tabs.html
+++ b/examples/tabs/tabs.html
@@ -9,9 +9,10 @@
     <link href="css/tabs.css" rel="stylesheet">
   </head>
   <body>
-    <h1>ARIA tabs widget Example</h1>
-
+    
     <main>
+    <h1>ARIA tabs widget Example</h1>
+    <p><strong>NOTE:</strong> Please provide feedback on this example in <a href="https://github.com/w3c/aria-practices/issues/114">issue 114</a>. </p>
       <h2>Creating a tabs widget using <code>role=tab</code>, <code>role=tablist</code>, and <code>role=tablist</code>.</h2>
 
       <p> <a href="../../aria-practices.html#tabpanel">Authoring Practice Design Patten for Tabs</a></p>
