--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -11,10 +11,10 @@
 
   <!--  js and css for this example. -->
   <link href="css/menuButton.css" rel="stylesheet">
-  <link href="css/dataGrid.css" rel="stylesheet">
+  <link href="css/dataGrids.css" rel="stylesheet">
   <script src="js/menuButton.js" type="text/javascript"></script>
   <script src="js/dataGrid.js" type="text/javascript"></script>
-  <script src="js/main.js" type="text/javascript"></script>
+  <script src="js/dataGrids.js" type="text/javascript"></script>
 
 </head>
 <body>
